# Sonora

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
.github/: RELEASE_TEMPLATE.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: index.html  main.js  styles.css
