[package]
name = "sonora"
version = "1.0.0"
description = "YouTube の音声をダウンロードするローカルアプリ(m4a 既定 / mp3 任意)"
edition = "2021"

[lib]
name = "sonora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sonora"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
